# tinyrag

./: .env.example  .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.sh  stop.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: 00_high_level_plan.md  01_project_scope_v1.md  01_project_scope_v2.md  02_srs_v1.md  03_architecture_v1.md  04_database_design_v1.md  05_tech_stack_v1.md  06_roadmap_v1.md  06_roadmap_v2.md  BUILDS.md  DEMO_QUESTIONS.md  EXPLANATION.md  MODELS.md
docs/evaluation/: gold_set.md  scoring_rubric.md
docs/laptop_fallback/: 02_srs_v1.md  03_architecture_v1.md  04_database_design_v1.md  05_tech_stack_v1.md  06_roadmap_laptop_v1.md  README.md
scripts/: ask.py  build_llamacpp.sh  download_fixtures.py  download_models.py  generate_synthetic_sensors.py  ingest.py  ingest_sensors.py  install_system_deps.sh  portability_check.sh  smoke_test.py  smoke_test_llm.py  verify_llamacpp.py
src/tinyrag/: __init__.py  config.py  main.py
src/tinyrag/api/: __init__.py  deps.py  errors.py  routes_admin.py  routes_docs.py  routes_query.py  schemas.py  system_info.py
src/tinyrag/core/: __init__.py  answer.py  chunker.py  prompt_builder.py  retriever.py  sensor_summarizer.py
src/tinyrag/generation/: __init__.py  llm_client.py
src/tinyrag/ingestion/: __init__.py  embedder.py  parsers.py
src/tinyrag/input_adapters/: __init__.py
src/tinyrag/models/: __init__.py  downloader.py  registry.py
src/tinyrag/observability/: __init__.py  logger.py
src/tinyrag/sensors/: __init__.py  base.py  mqtt.py  serial_dht.py  simulated.py
src/tinyrag/storage/: __init__.py  metadata.py  vector_store.py
src/tinyrag/ui/: __init__.py
src/tinyrag/ui/static/: .gitkeep
src/tinyrag/ui/templates/: .gitkeep
tests/: conftest.py  test_admin_ui.py  test_api.py  test_ask.py  test_chunker.py  test_config.py  test_download_fixtures.py  test_download_models.py  test_embedder.py  test_generate_synthetic_sensors.py  test_ingest.py  test_ingest_sensors.py  test_llm_client.py  test_logger.py  test_metadata.py  test_parsers.py  test_portability_check.py  test_prompt_builder.py  test_retriever.py  test_sensor_summarizer.py  test_sensors.py  test_shell_scripts.py  test_skeleton.py  test_smoke.py  test_smoke_test.py  test_status_ui.py  test_vector_store.py  test_web_ui.py
ui/static/: admin.js  chat.js  status.js  style.css
ui/templates/: admin.html  index.html
