# ============================================================================
# TinyRAG — pyproject.toml
# ----------------------------------------------------------------------------
# Modern PEP 621 packaging metadata + unified tool configuration.
# This file is the single source of truth for:
#   - Project identity (name, version, authors, license)
#   - Python version requirement
#   - Runtime + dev dependency lists (mirrors requirements*.txt for tools
#     that read pyproject directly, like `pip install -e .` and `ruff`)
#   - Tool configs: ruff, pytest, coverage, mypy
#
# See: https://peps.python.org/pep-0621/
# ============================================================================


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


# ----------------------------------------------------------------------------
# Project metadata
# ----------------------------------------------------------------------------
[project]
name = "tinyrag"
version = "0.1.0"
description = "A lightweight, on-device Retrieval-Augmented Generation assistant for smart-home IoT."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Marajul Haque", email = "marajul.cu@gmail.com" },
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "edge-ai",
    "iot",
    "smart-home",
    "llama.cpp",
    "raspberry-pi",
    "privacy",
    "on-device",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]

# Runtime dependencies — must mirror requirements.txt exactly.
# If you bump a version here, bump it in requirements.txt too (and vice versa).
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "markdown==3.7",
    "pyyaml==6.0.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "faiss-cpu==1.8.0.post1",
    "sentence-transformers==3.2.1",
    "torch==2.4.1",
    "numpy==1.26.4",
    "tiktoken==0.8.0",
    "pdfplumber==0.11.4",
    "httpx==0.27.2",
    "sse-starlette==2.1.3",
    "structlog==24.4.0",
    "paho-mqtt==2.1.0",
    "python-dateutil==2.9.0.post0",
    "pandas==2.2.3",
]

[project.optional-dependencies]
# Mirrors requirements-dev.txt. Install via: pip install -e ".[dev]"
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.7.2",
    "mypy==1.13.0",
    "types-PyYAML==6.0.12.20240917",
    "types-python-dateutil==2.9.0.20241003",
    "types-requests==2.32.0.20240914",
    "build==1.2.2",
    "pip-tools==7.4.1",
]
# Pi-only sensor deps. Install via: pip install -e ".[pi]"
pi = [
    "RPi.GPIO>=0.7.0",
    "gpiozero>=2.0",
    "adafruit-circuitpython-dht==4.0.4",
    "adafruit-blinka==8.21.0",
]

[project.urls]
Homepage = "https://github.com/marajulcsecu/tinyrag"
Issues = "https://github.com/marajulcsecu/tinyrag/issues"
Documentation = "https://github.com/marajulcsecu/tinyrag#documentation-index"


# ----------------------------------------------------------------------------
# Setuptools package discovery
# ----------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tinyrag*"]
# Explicit excludes keep generated/test data out of the wheel.
exclude = ["tests*", "data*", "models*", "reports*", "logs*"]


# ----------------------------------------------------------------------------
# Ruff — lint + format (one tool, two jobs)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "models",
    "data",
    "reports",
    "logs",
]

[tool.ruff.lint]
# Start strict-ish but practical: catch real bugs, don't nitpick style.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (undefined names, unused imports)
    "I",      # isort (import order)
    "B",      # bugbear (likely bugs)
    "UP",     # pyupgrade (modern syntax)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument — common in FastAPI
    "SIM108", # use ternary — sometimes clearer as if/else
]

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to be a bit looser.
"tests/**" = ["B011"]  # asserts are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",                  # show summary of all fail/skip/xfail reasons
    "--strict-markers",     # fail on unknown markers (catches typos)
    "--strict-config",      # fail on config errors
    "--showlocals",         # show local variables in tracebacks
    "--tb=short",           # shorter traceback format
]
# Markers must be registered here so `--strict-markers` doesn't reject them.
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services (llama.cpp, MQTT)",
    "sensor: marks tests that require real or simulated sensor data",
]
asyncio_mode = "auto"        # let pytest-asyncio handle async test functions
asyncio_default_fixture_loop_scope = "function"  # silence FutureWarning


# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/tinyrag"]
branch = true
omit = [
    "src/tinyrag/__init__.py",
    "src/tinyrag/main.py",   # FastAPI entrypoint — tested via integration
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]


# ----------------------------------------------------------------------------
# MyPy — gradual typing (Phase 4 onward)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
# Start non-strict; tighten in Phase 7.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true   # third-party libs without stubs (faiss, etc.)
exclude = [
    ".venv",
    "build",
    "data",
    "models",
    "reports",
]
